--- a/net-analyzer/rtg/ChangeLog
+++ b/net-analyzer/rtg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-analyzer/rtg
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/rtg/Attic/ChangeLog,v 1.3 2004/05/30 00:05:17 anti Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-analyzer/cvs-repo/gentoo-x86/net-analyzer/rtg/Attic/ChangeLog,v 1.4 2004/06/04 09:10:09 dholm Exp $
+
+  04 Jun 2004; David Holm <dholm@gentoo.org> rtg-0.7.4-r1.ebuild:
+  Added to ~ppc.
 
 *rtg-0.7.4-r1 (29 May 2004)
 
