--- a/app-arch/makeself/ChangeLog
+++ b/app-arch/makeself/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-arch/makeself
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/makeself/ChangeLog,v 1.3 2004/04/16 20:33:43 randy Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-arch/cvs-repo/gentoo-x86/app-arch/makeself/ChangeLog,v 1.4 2004/06/04 09:11:47 dholm Exp $
+
+  04 Jun 2004; David Holm <dholm@gentoo.org> makeself-2.1.2.ebuild:
+  Added to ~ppc.
 
   16 Apr 2004; Michael McCabe <randy@gentoo.org> makeself-2.1.2.ebuild:
   added s390 keywords
