--- a/dev-util/sel/ChangeLog
+++ b/dev-util/sel/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-util/sel
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/sel/ChangeLog,v 1.6 2004/06/01 21:36:45 wschlich Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/sel/ChangeLog,v 1.7 2004/06/04 09:12:58 dholm Exp $
+
+  04 Jun 2004; David Holm <dholm@gentoo.org> sel-0.08.4.ebuild:
+  Added to ~ppc.
 
 *sel-0.08.4 (01 Jun 2004)
 
