--- a/mail-client/smtpclient/ChangeLog
+++ b/mail-client/smtpclient/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/smtpclient
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/smtpclient/Attic/ChangeLog,v 1.1 2004/05/30 02:59:55 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/smtpclient/Attic/ChangeLog,v 1.2 2004/06/04 09:15:03 dholm Exp $
+
+  04 Jun 2004; David Holm <dholm@gentoo.org> smtpclient-1.0.0.ebuild:
+  Added to ~ppc.
 
 *smtpclient-1.0.0 (29 May 2004)
 
