--- a/mail-client/spruce/ChangeLog
+++ b/mail-client/spruce/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/spruce
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/spruce/Attic/ChangeLog,v 1.1 2004/05/30 03:00:54 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-client/cvs-repo/gentoo-x86/mail-client/spruce/Attic/ChangeLog,v 1.2 2004/06/04 09:16:46 dholm Exp $
+
+  04 Jun 2004; David Holm <dholm@gentoo.org> spruce-0.7.6-r2.ebuild:
+  Added to ~ppc.
 
 *spruce-0.7.6-r2 (29 May 2004)
 
