--- a/app-i18n/uim-fep/ChangeLog
+++ b/app-i18n/uim-fep/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for app-i18n/uim-fep
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/uim-fep/Attic/ChangeLog,v 1.6 2004/05/18 22:38:33 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-i18n/cvs-repo/gentoo-x86/app-i18n/uim-fep/Attic/ChangeLog,v 1.7 2004/06/04 17:07:10 usata Exp $
+
+*uim-fep-0.3.0 (05 Jun 2004)
+
+  05 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> uim-fep-0.2.7.ebuild,
+  uim-fep-0.2.8.ebuild, uim-fep-0.3.0.ebuild:
+  Version bumped. Marked previous versions stable on x86.
 
 *uim-fep-0.2.8 (19 May 2004)
 
