--- a/app-text/ptex/ChangeLog
+++ b/app-text/ptex/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-text/ptex
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ptex/Attic/ChangeLog,v 1.14 2004/05/08 09:46:57 usata Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-text/cvs-repo/gentoo-x86/app-text/ptex/Attic/ChangeLog,v 1.15 2004/06/04 18:24:53 usata Exp $
+
+  05 Jun 2004; Mamoru KOMACHI <usata@gentoo.org> ptex-3.1.2-r1.ebuild,
+  ptex-3.1.3.ebuild:
+  Removed old ebuild. Marked 3.1.3 stable on ppc.
 
   08 May 2004; Mamoru KOMACHI <usata@gentoo.org> ptex-3.1.2-r1.ebuild,
   ptex-3.1.2.ebuild, ptex-3.1.3.ebuild:
