--- a/games-puzzle/groundhog/ChangeLog
+++ b/games-puzzle/groundhog/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-puzzle/groundhog
-# Copyright 2000-2003 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/groundhog/ChangeLog,v 1.3 2003/09/14 04:37:58 vapier Exp $
+# Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
+# $Header: /usr/local/ssd/gentoo-x86/output/games-puzzle/cvs-repo/gentoo-x86/games-puzzle/groundhog/ChangeLog,v 1.4 2004/06/04 19:15:03 jhuebel Exp $
+
+  04 Jun 2004; Jason Eric Huebel <jhuebel@gentoo.org> groundhog-1.4.ebuild:
+  gnuconfig_update added, ~amd64
 
 *groundhog-1.4 (07 Mar 2003)
 
