--- a/mail-filter/popfile/ChangeLog
+++ b/mail-filter/popfile/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/popfile
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/popfile/ChangeLog,v 1.1 2004/06/03 07:22:04 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/popfile/ChangeLog,v 1.2 2004/06/04 23:09:52 dholm Exp $
+
+  05 Jun 2004; David Holm <dholm@gentoo.org> popfile-0.21.1.ebuild:
+  Added to ~ppc.
 
 *popfile-0.20.1 (03 Jun 2004)
 
