--- a/app-sci/gwave/ChangeLog
+++ b/app-sci/gwave/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-sci/gwave
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/gwave/Attic/ChangeLog,v 1.6 2004/04/25 22:49:46 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-sci/cvs-repo/gentoo-x86/app-sci/gwave/Attic/ChangeLog,v 1.7 2004/06/04 23:27:01 dholm Exp $
+
+  05 Jun 2004; David Holm <dholm@gentoo.org> gwave-20031224.ebuild:
+  Added to ~ppc.
 
   25 Apr 2004; Aron Griffis <agriffis@gentoo.org> gwave-20020122.ebuild:
   Add die following econf for bug 48950
