--- a/sys-fs/dd-rescue/ChangeLog
+++ b/sys-fs/dd-rescue/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for sys-fs/dd-rescue
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/dd-rescue/ChangeLog,v 1.4 2004/06/02 21:50:53 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/sys-fs/cvs-repo/gentoo-x86/sys-fs/dd-rescue/ChangeLog,v 1.5 2004/06/04 23:30:36 dholm Exp $
+
+  05 Jun 2004; David Holm <dholm@gentoo.org> dd-rescue-1.03.ebuild:
+  Added to ~ppc.
 
 *dd-rescue-1.03 (02 Jun 2004)
 
