--- a/mail-filter/amavisd-new/ChangeLog
+++ b/mail-filter/amavisd-new/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/amavisd-new
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.2 2004/06/04 04:41:29 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/amavisd-new/ChangeLog,v 1.3 2004/06/04 23:35:07 dholm Exp $
+
+  05 Jun 2004; David Holm <dholm@gentoo.org> amavisd-new-20030616_p9.ebuild:
+  Added to ~ppc.
 
   03 Jun 2004; Seemant Kulleen <seemant@gentoo.org>
   amavisd-new-20030616_p8.ebuild, amavisd-new-20030616_p9.ebuild:
