--- a/mail-filter/bmf/ChangeLog
+++ b/mail-filter/bmf/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/bmf
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.1 2004/06/03 07:02:01 seemant Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/mail-filter/cvs-repo/gentoo-x86/mail-filter/bmf/ChangeLog,v 1.2 2004/06/04 23:33:10 dholm Exp $
+
+  05 Jun 2004; David Holm <dholm@gentoo.org> bmf-0.9.4.ebuild:
+  Added to ~ppc.
 
 *bmf-0.9.4 (03 Jun 2004)
 
