--- a/media-libs/libpixman/ChangeLog
+++ b/media-libs/libpixman/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/libpixman
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/ChangeLog,v 1.4 2004/05/12 00:08:10 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/libpixman/Attic/ChangeLog,v 1.5 2004/06/05 00:25:17 weeve Exp $
+
+  04 Jun 2004; Jason Wever <weeve@gentoo.org> libpixman-0.1.1.ebuild:
+  Added ~sparc keyword.
 
 *libpixman-0.1.1 (11 May 2004)
 
