--- a/x11-libs/cairo/ChangeLog
+++ b/x11-libs/cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/cairo
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.6 2004/05/12 12:53:42 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/cairo/ChangeLog,v 1.7 2004/06/05 00:29:12 weeve Exp $
+
+  04 Jun 2004; Jason Wever <weeve@gentoo.org> cairo-0.1.23.ebuild:
+  Added ~sparc keyword.
 
   12 May 2004; Travis Tilley <lv@gentoo.org> cairo-0.1.23.ebuild:
   fixed dep on libpixman
