--- a/x11-libs/libsvg-cairo/ChangeLog
+++ b/x11-libs/libsvg-cairo/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for x11-libs/libsvg-cairo
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libsvg-cairo/ChangeLog,v 1.5 2004/05/12 00:31:03 lv Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/x11-libs/cvs-repo/gentoo-x86/x11-libs/libsvg-cairo/ChangeLog,v 1.6 2004/06/05 00:30:14 weeve Exp $
+
+  04 Jun 2004; Jason Wever <weeve@gentoo.org> libsvg-cairo-0.1.4.ebuild:
+  Added ~sparc keyword.
 
   11 May 2004; Travis Tilley <lv@gentoo.org> libsvg-cairo-0.1.4.ebuild:
   added ~amd64 keyword
