--- a/app-admin/tripwire/ChangeLog
+++ b/app-admin/tripwire/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for app-admin/tripwire
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/tripwire/ChangeLog,v 1.9 2004/06/04 19:39:59 taviso Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-admin/cvs-repo/gentoo-x86/app-admin/tripwire/ChangeLog,v 1.10 2004/06/05 18:34:09 taviso Exp $
+
+  05 Jun 2004; Tavis Ormandy <taviso@gentoo.org> tripwire-2.3.1.2.ebuild:
+  removing old ebuilds
 
 *tripwire-2.3.1.2-r1 (04 Jun 2004)
 
