--- a/dev-perl/extutils-parsexs/ChangeLog
+++ b/dev-perl/extutils-parsexs/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for dev-perl/extutils-parsexs
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-parsexs/Attic/ChangeLog,v 1.3 2004/06/05 13:23:07 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/extutils-parsexs/Attic/ChangeLog,v 1.4 2004/06/05 19:09:57 mcummings Exp $
+
+*extutils-parsexs-2.08 (05 Jun 2004)
+
+  05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
+  extutils-parsexs-2.08.ebuild:
+  new version on cpan, new dep
 
   05 Jun 2004; Michael Cummings <mcummings@gentoo.org>
   extutils-parsexs-2.02.ebuild:
