--- a/net-p2p/dclib/ChangeLog
+++ b/net-p2p/dclib/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for net-p2p/dclib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.38 2004/05/30 20:28:00 aliz Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-p2p/cvs-repo/gentoo-x86/net-p2p/dclib/ChangeLog,v 1.39 2004/06/05 19:29:56 squinky86 Exp $
+
+*dclib-0.3.2 (05 Jun 2004)
+
+  05 Jun 2004; Jon Hood <squinky86@gentoo.org> +files/dclib-0.3.2-gcc2.patch,
+  +dclib-0.3.2.ebuild:
+  version bump found by Daniel Webert <daniel_webert@web.de>; #53028
 
 *dclib-0.3.1 (30 May 2004)
 
