--- a/dev-util/source-highlight/ChangeLog
+++ b/dev-util/source-highlight/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for dev-util/source-highlight
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.3 2004/04/19 08:56:40 dholm Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-util/cvs-repo/gentoo-x86/dev-util/source-highlight/ChangeLog,v 1.4 2004/06/06 00:10:24 dragonheart Exp $
+
+  06 Jun 2004; Daniel Black <dragonheart@gentoo.org>
+  source-highlight-1.8.ebuild:
+  x86 keyword
 
   19 Apr 2004; David Holm <dholm@gentoo.org> source-highlight-1.8.ebuild:
   Added to ~ppc.
