--- a/media-sound/aumix/ChangeLog
+++ b/media-sound/aumix/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/aumix
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/aumix/ChangeLog,v 1.27 2004/05/31 06:35:45 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/aumix/ChangeLog,v 1.28 2004/06/06 19:56:19 weeve Exp $
+
+  06 Jun 2004; Jason Wever <weeve@gentoo.org> aumix-2.8-r1.ebuild:
+  Sparc me like a hurricane.
 
   30 May 2004; Jeremy Huddleston <eradicator@gentoo.org> aumix-2.8-r1.ebuild:
   Stable x86.
