--- a/media-sound/madplay/ChangeLog
+++ b/media-sound/madplay/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/madplay
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/madplay/ChangeLog,v 1.17 2004/05/31 06:45:34 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/madplay/ChangeLog,v 1.18 2004/06/06 20:54:50 weeve Exp $
+
+  06 Jun 2004; Jason Wever <weeve@gentoo.org> madplay-0.15.2b.ebuild:
+  Stable on sparc.
 
   30 May 2004; Jeremy Huddleston <eradicator@gentoo.org>
   madplay-0.15.2b.ebuild:
