--- a/media-sound/mpg123/ChangeLog
+++ b/media-sound/mpg123/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/mpg123
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.42 2004/05/31 18:12:11 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/mpg123/ChangeLog,v 1.43 2004/06/06 20:58:10 weeve Exp $
+
+  06 Jun 2004; Jason Wever <weeve@gentoo.org> mpg123-0.59s-r3.ebuild:
+  Stable on sparc.
 
   31 May 2004; Jeremy Huddleston <eradicator@gentoo.org>
   mpg123-0.59s-r3.ebuild:
