--- a/net-libs/openhbci/ChangeLog
+++ b/net-libs/openhbci/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-libs/openhbci
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/openhbci/Attic/ChangeLog,v 1.11 2004/04/11 15:44:24 weeve Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-libs/cvs-repo/gentoo-x86/net-libs/openhbci/Attic/ChangeLog,v 1.12 2004/06/07 01:08:58 kloeri Exp $
+
+  07 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> openhbci-0.9.14.ebuild:
+  Stable on alpha.
 
   11 Apr 2004; Jason Wever <weeve@gentoo.org> openhbci-0.9.14.ebuild:
   Added ~sparc keyword.
