--- a/net-www/apache/ChangeLog
+++ b/net-www/apache/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-www/apache
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.192 2004/06/07 01:50:28 zul Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-www/cvs-repo/gentoo-x86/net-www/apache/Attic/ChangeLog,v 1.193 2004/06/07 02:35:28 zul Exp $
+
+  06 Jun 2004; Chuck Short <zul@gentoo.org> apache-1.3.31-r1.ebuild:
+  mod_rewrite needs db-1.85-r1 to compile properly. Closes #52201.
 
   06 Jun 2004; Chuck Short <zul@gentoo.org> apache-1.3.31.ebuild:
   Added dependency on sys-libs/db-1.85-r1.
