--- a/app-laptop/pbbuttonsd/ChangeLog
+++ b/app-laptop/pbbuttonsd/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-laptop/pbbuttonsd
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/pbbuttonsd/ChangeLog,v 1.7 2004/06/04 05:08:52 dostrow Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-laptop/cvs-repo/gentoo-x86/app-laptop/pbbuttonsd/ChangeLog,v 1.8 2004/06/07 03:56:04 agriffis Exp $
+
+  06 Jun 2004; Aron Griffis <agriffis@gentoo.org> pbbuttonsd-0.5.2-r1.ebuild,
+  pbbuttonsd-0.6.1.ebuild:
+  Fix typo: src_postinstall -> pkg_postinst
 
 *pbbuttonsd-0.6.1 (03 Jun 2004)
 
