--- a/games-board/teg/ChangeLog
+++ b/games-board/teg/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for games-board/teg
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/teg/ChangeLog,v 1.5 2004/05/27 22:54:54 mr_bones_ Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/games-board/cvs-repo/gentoo-x86/games-board/teg/ChangeLog,v 1.6 2004/06/07 05:25:58 mr_bones_ Exp $
+
+  06 Jun 2004; Michael Sterrett <mr_bones_@gentoo.org> teg-0.11.1.ebuild:
+  stablize; teg-0.11.0 is pretty broken
 
 *teg-0.11.1 (27 May 2004)
 
