--- a/net-mail/autorespond/ChangeLog
+++ b/net-mail/autorespond/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/autorespond
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/autorespond/ChangeLog,v 1.6 2004/04/27 20:46:19 agriffis Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/autorespond/ChangeLog,v 1.7 2004/06/07 06:06:29 kloeri Exp $
+
+  07 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> autorespond-2.0.4.ebuild:
+  Stable on alpha.
 
   27 Apr 2004; Aron Griffis <agriffis@gentoo.org> autorespond-2.0.4.ebuild:
   Add inherit eutils
