--- a/net-mail/qmhandle/ChangeLog
+++ b/net-mail/qmhandle/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for net-mail/qmhandle
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/qmhandle/ChangeLog,v 1.5 2004/05/05 07:12:28 dragonheart Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-mail/cvs-repo/gentoo-x86/net-mail/qmhandle/ChangeLog,v 1.6 2004/06/07 06:22:34 kloeri Exp $
+
+  07 Jun 2004; Bryan Østergaard <kloeri@gentoo.org> qmhandle-1.1.1.ebuild:
+  Stable on alpha.
 
   05 May 2004; Daniel Black <dragonheart@gentoo.org> qmhandle-1.1.1.ebuild:
   QA Fix - inherit before DESCRIPTION
