--- a/app-misc/srm/ChangeLog
+++ b/app-misc/srm/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for app-misc/srm
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/srm/ChangeLog,v 1.2 2004/02/21 04:14:27 absinthe Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/app-misc/cvs-repo/gentoo-x86/app-misc/srm/ChangeLog,v 1.3 2004/06/07 08:51:54 dragonheart Exp $
+
+  07 Jun 2004; Daniel Black <dragonheart@gentoo.org> +metadata.xml,
+  srm-1.2.7.ebuild, +srm-1.2.8.ebuild:
+  version bump. 1.2.7 x86 stable
 
   20 Feb 2004; Dylan Carlson <absinthe@gentoo.org> srm-1.2.7.ebuild:
   added amd64 keyword.
