--- a/media-gfx/bootsplash-themes-livecd/ChangeLog
+++ b/media-gfx/bootsplash-themes-livecd/ChangeLog
@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/bootsplash-themes-livecd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/bootsplash-themes-livecd/Attic/ChangeLog,v 1.5 2004/06/03 22:42:23 wolf31o2 Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-gfx/cvs-repo/gentoo-x86/media-gfx/bootsplash-themes-livecd/Attic/ChangeLog,v 1.6 2004/06/07 20:33:11 wolf31o2 Exp $
+
+*bootsplash-themes-livecd-2004.2-r2 (07 Jun 2004)
+
+  07 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
+  +bootsplash-themes-livecd-2004.2-r2.ebuild:
+  Updated to fix font burriness.
 
   03 Jun 2004; Chris Gianelloni <wolf31o2@gentoo.org>
   -bootsplash-themes-livecd-2004.2.ebuild:
