--- a/media-fonts/ttf-bitstream-vera/ChangeLog
+++ b/media-fonts/ttf-bitstream-vera/ChangeLog
@@ -1,6 +1,10 @@
 # ChangeLog for media-fonts/ttf-bitstream-vera
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/ttf-bitstream-vera/ChangeLog,v 1.8 2004/05/31 14:24:24 foser Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-fonts/cvs-repo/gentoo-x86/media-fonts/ttf-bitstream-vera/ChangeLog,v 1.9 2004/06/07 21:29:54 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org>
+  ttf-bitstream-vera-1.10-r2.ebuild:
+  Fix use invocation
 
 *ttf-bitstream-vera-1.10-r3 (31 May 2004)
 
