--- a/media-libs/musicbrainz/ChangeLog
+++ b/media-libs/musicbrainz/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/musicbrainz
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.27 2004/05/31 08:10:00 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/musicbrainz/ChangeLog,v 1.28 2004/06/07 23:01:03 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> musicbrainz-2.0.2-r2.ebuild:
+  Fix use invocation
 
 *musicbrainz-2.1.1 (31 May 2004)
 
