--- a/media-libs/xine-lib/ChangeLog
+++ b/media-libs/xine-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/xine-lib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.122 2004/05/28 03:28:25 dostrow Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/xine-lib/ChangeLog,v 1.123 2004/06/07 22:58:12 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> xine-lib-0.9.13-r3.ebuild:
+  Fix use invocation
 
   27 May 2004; Daniel Ostrow <dostrow@gentoo.org> xine-lib-1_rc4-r1.ebuild:
   Stable on ppc.
