--- a/media-libs/alsa-lib/ChangeLog
+++ b/media-libs/alsa-lib/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-libs/alsa-lib
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.66 2004/05/31 05:03:49 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-libs/cvs-repo/gentoo-x86/media-libs/alsa-lib/ChangeLog,v 1.67 2004/06/07 23:54:26 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> alsa-lib-1.0.2.ebuild:
+  Fix use invocation
 
 *alsa-lib-1.0.5 (30 May 2004)
 
