--- a/media-sound/ermixer/ChangeLog
+++ b/media-sound/ermixer/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for media-sound/ermixer
 # Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/ermixer/Attic/ChangeLog,v 1.15 2004/04/20 17:19:51 eradicator Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/ermixer/Attic/ChangeLog,v 1.16 2004/06/08 01:22:23 agriffis Exp $
+
+  07 Jun 2004; Aron Griffis <agriffis@gentoo.org> ermixer-0.8.ebuild:
+  Fix use invocation
 
   20 Apr 2004; Jeremy Huddleston <eradicator@gentoo.org> ermixer-0.7.1.ebuild,
   ermixer-0.7.ebuild:
