--- a/dev-perl/Array-Window/ChangeLog
+++ b/dev-perl/Array-Window/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Array-Window
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.2 2004/06/05 14:26:02 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Array-Window/ChangeLog,v 1.3 2004/06/08 12:18:48 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> Array-Window-0.4.ebuild:
+  Added to ~ppc.
 
 *Array-Window-0.4 (05 Jun 2004)
 
