--- a/dev-perl/Data-Compare/ChangeLog
+++ b/dev-perl/Data-Compare/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Data-Compare
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.2 2004/06/05 18:05:42 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Data-Compare/ChangeLog,v 1.3 2004/06/08 12:20:21 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> Data-Compare-0.11.ebuild:
+  Added to ~ppc.
 
 *Data-Compare-0.11 (05 Jun 2004)
 
