--- a/dev-perl/Digest-MD4/ChangeLog
+++ b/dev-perl/Digest-MD4/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Digest-MD4
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Digest-MD4/ChangeLog,v 1.6 2004/06/05 18:31:37 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Digest-MD4/ChangeLog,v 1.7 2004/06/08 12:25:16 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> Digest-MD4-1.3.ebuild:
+  Added to ~ppc.
 
 *Digest-MD4-1.3 (05 Jun 2004)
 
