--- a/dev-perl/FileHandle-Unget/ChangeLog
+++ b/dev-perl/FileHandle-Unget/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/FileHandle-Unget
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/FileHandle-Unget/ChangeLog,v 1.3 2004/06/05 19:40:34 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/FileHandle-Unget/ChangeLog,v 1.4 2004/06/08 12:25:44 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> FileHandle-Unget-0.14.ebuild:
+  Added to ~ppc.
 
 *FileHandle-Unget-0.14 (05 Jun 2004)
 
