--- a/dev-python/pyclamav/ChangeLog
+++ b/dev-python/pyclamav/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-python/pyclamav
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyclamav/ChangeLog,v 1.1 2004/06/05 13:49:50 kloeri Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-python/cvs-repo/gentoo-x86/dev-python/pyclamav/ChangeLog,v 1.2 2004/06/08 12:38:04 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> pyclamav-0.1.ebuild:
+  Added to ~ppc.
 
 *pyclamav-0.1 (05 Jun 2004)
 
