--- a/dev-perl/HTTP-DAV/ChangeLog
+++ b/dev-perl/HTTP-DAV/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/HTTP-DAV
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-DAV/ChangeLog,v 1.1 2004/03/29 11:37:49 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/HTTP-DAV/ChangeLog,v 1.2 2004/06/08 20:28:47 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> HTTP-DAV-0.31.ebuild:
+  Added to ~ppc.
 
 *HTTP-DAV-0.31 (29 Mar 2004)
 
