--- a/dev-perl/Term-ANSIScreen/ChangeLog
+++ b/dev-perl/Term-ANSIScreen/ChangeLog
@@ -1,6 +1,9 @@
 # ChangeLog for dev-perl/Term-ANSIScreen
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Term-ANSIScreen/ChangeLog,v 1.3 2004/06/06 23:36:55 mcummings Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/dev-perl/cvs-repo/gentoo-x86/dev-perl/Term-ANSIScreen/ChangeLog,v 1.4 2004/06/08 20:25:11 dholm Exp $
+
+  08 Jun 2004; David Holm <dholm@gentoo.org> Term-ANSIScreen-1.42.ebuild:
+  Added to ~ppc.
 
 *Term-ANSIScreen-1.42 (06 Jun 2004)
 
