--- a/media-video/submux-dvd/ChangeLog
+++ b/media-video/submux-dvd/ChangeLog
@@ -1,6 +1,6 @@
-# ChangeLog for <CATEGORY>/<PACKAGE_NAME>
+# ChangeLog for media-video/submux-dvd
 # Copyright 2000-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/submux-dvd/ChangeLog,v 1.2 2004/06/09 12:16:57 lordvan Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/submux-dvd/ChangeLog,v 1.3 2004/06/09 12:24:25 lordvan Exp $
 
   09 Jun 2004; Thomas Raschbacher <lordvan@gentoo.org> submux-dvd-0.5.ebuild:
   fixes bug #52405, thanks to Stefan Briesenick <sbriesen@gmx.de>
